Ajout du header + CSS de celui-ci

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
 <body>
     <div class="main-container">
         <header>
-            
+            <img class="img_logo" src="images/logo/Booki.png" alt="Logo Booki">
+            <nav>
+                <ul>
+                    <li>
+                        <a class="active_page" href="#">Hébergements</a>
+                    </li>
+                    <li>
+                        <a href="#">Activités</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main>
             <div class="hebergements-and-populaires">
