Ajout de la première partie de la première section, qui comprend le titre, son paragraphe et le formulaire de recherche.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
             </nav>
         </header>
         <main>
+            <section class="search">
+                <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+                <p>En plein centre-ville ou en pleine nature</p>
+                <form method="get" action="#"></form>
+                    <div class="forms_search">
+                        <div class="icone_search">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <input type="text" id="input_search" value="Marseille, France">
+                        <input type="submit" value="Rechercher" id="button_search">
+                    </div>
+                </form>
+            </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
