--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-                    <h2>Hébergements à Marseille</h2>
+                    <div class="hebergement-title">
+                            <h2>Hébergements à Marseille</h2>
+                    </div>
                     <div class="hebergements-cards">
                         <a href="#">
                             <article class="card">
@@ -200,12 +202,10 @@
                     </a>
                 </section>
                 <section class="populaires">
-                    <div class="populaires-title">
-                        <a href="#">
+                        <div class="populaires-title">
                             <h2 class="section-title">Les plus populaires</h2>
                             <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
-                        </a>
-                    </div>
+                        </div>
                     <div class="populaires-cards">
                         <a href="#">
                             <article class="card">
