--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="search">
                     <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
                     <p>En plein centre-ville ou en pleine nature</p>
-                    <form method="get" action="#"></form>
+                    <form method="get" action="#">
                         <div class="forms_search">
                             <div class="icone_search">
                                 <i class="fa-solid fa-location-dot"></i>
