--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
                     <div class="hebergement-title">
-                            <h2>Hébergements à Marseille</h2>
+                        <h2>Hébergements à Marseille</h2>
                     </div>
                     <div class="hebergements-cards">
                         <a href="#">
@@ -267,6 +267,27 @@
                     </div>
                 </section>
             </div>
+            <section class="activities">
+                <h2>Activités à Marseille </h2>
+                <div class="activities-cards">
+                    <div class="card">
+                        <img src="images/activites/reno-laithienne.jpg" alt="Image illustrant le vieux-port">
+                        <h3>Vieux-Port</h3>
+                    </div>
+                    <div class="card">
+                        <img src="images/activites/paul-hermann.jpg" alt="Image illustrant un fort dans un milieu rocheux">
+                        <h3>Fort de Pomègues</h3>
+                    </div>
+                    <div class="card">
+                        <img src="images/activites/kilyan-sockalingum.jpg" alt="Image illustrant une falaise au bord de la mer">
+                        <h3>Parc national des Calanques</h3>
+                    </div>
+                    <div class="card">
+                        <img src="images/activites/florian-wehde.jpg" alt="Image illustrant une basilic au dessus d'un mont">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
