Correction du nav, couleur mise au niveau du survol et non de la page active

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="active_page" href="#">Hébergements</a>
+                        <a href="#">Hébergements</a>
                     </li>
                     <li>
                         <a href="#">Activités</a>
