--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Hébergements</a>
+                        <a href="#hebergements">Hébergements</a>
                     </li>
                     <li>
-                        <a href="#">Activités</a>
+                        <a href="#activities">Activités</a>
                     </li>
                 </ul>
             </nav>
@@ -77,7 +77,7 @@
                 </div>
             </section>
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+                <section id="hebergements">
                     <div class="hebergement-title">
                         <h2>Hébergements à Marseille</h2>
                     </div>
@@ -267,7 +267,7 @@
                     </div>
                 </section>
             </div>
-            <section class="activities">
+            <section id="activities">
                 <h2>Activités à Marseille </h2>
                 <div class="activities-cards">
                     <div class="card">
