--- a/index.html
+++ b/index.html
@@ -290,7 +290,44 @@
             </section>
         </main>
         <footer>
-
+            <div class="footer">
+                <div class="bloc-footer">
+                    <h3>À propos</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Fonctionnement du site</a>
+                        </li>
+                        <li>
+                            <a href="#">Conditions générales</a>
+                        </li>
+                        <li>
+                            <a href="#">Données et confidentialités </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bloc-footer">
+                    <h3>Nos hébergements</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Charte de qualité</a>
+                        </li>
+                        <li>
+                            <a href="#">Proposer votre hôtel</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bloc-footer">
+                    <h3>Assistance</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Centre d'aide</a>
+                        </li>
+                        <li>
+                            <a href="#">Nous contacter</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
