--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="main-container">
         <header>
-            <img class="img_logo" src="images/logo/Booki.png" alt="Logo Booki">
+            <img class="img_logo" src="images/logo/Booki@3x.png" alt="Logo Booki">
             <nav>
                 <ul>
                     <li>
@@ -270,22 +270,30 @@
             <section id="activities">
                 <h2>Activités à Marseille </h2>
                 <div class="activities-cards">
-                    <article class="card">
-                        <img src="images/activites/reno-laithienne.jpg" alt="Image illustrant le vieux-port">
-                        <h3>Vieux-Port</h3>
-                    </article>
-                    <article class="card">
-                        <img src="images/activites/paul-hermann.jpg" alt="Image illustrant un fort dans un milieu rocheux">
-                        <h3>Fort de Pomègues</h3>
-                    </article>
-                    <article class="card">
-                        <img src="images/activites/kilyan-sockalingum.jpg" alt="Image illustrant une falaise au bord de la mer">
-                        <h3>Parc national des Calanques</h3>
-                    </article>
-                    <article class="card">
-                        <img src="images/activites/florian-wehde.jpg" alt="Image illustrant une basilic au dessus d'un mont">
-                        <h3>Notre-Dame-de-la-Garde</h3>
-                    </article>
+                    <a href="#">
+                        <article class="card">
+                            <img src="images/activites/reno-laithienne.jpg" alt="Image illustrant le vieux-port">
+                            <h3>Vieux-Port</h3>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="images/activites/paul-hermann.jpg" alt="Image illustrant un fort dans un milieu rocheux">
+                            <h3>Fort de Pomègues</h3>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="images/activites/kilyan-sockalingum.jpg" alt="Image illustrant une falaise au bord de la mer">
+                            <h3>Parc national des Calanques</h3>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="images/activites/florian-wehde.jpg" alt="Image illustrant une basilic au dessus d'un mont">
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </article>
+                    </a>
                 </div>
             </section>
         </main>
