Début de l'adaptation avec les media-queries pour les petits écrans (- de 768px ) du header, de la section recherches et filtres, et de la section populaires

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                             </div>
                             <input type="text" id="input_search" value="Marseille, France">
                             <input type="submit" value="Rechercher" id="button_search">
+                            <i class="fa-solid fa-magnifying-glass mobile-icone"></i>
                         </div>
                     </form>
                 </div>
